@@ -36,6 +36,9 @@
         <tag>HEAD</tag>
     </scm>
 	<properties>
+        <jvmargs></jvmargs>
+        <scala.version>2.9.3</scala.version>
+        <gatling.version>1.5.5</gatling.version>
         <surefireArgLine />
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<catalina.version>7.0.53</catalina.version>
@@ -53,7 +56,7 @@
         <maven-shade-plugin.version>2.2</maven-shade-plugin.version>
         <maven-site-plugin.version>3.3</maven-site-plugin.version>
         <memcachedtest.version>1.0.0</memcachedtest.version>
-        <async.version>1.8.6</async.version>
+        <async.version>1.8.3</async.version>
     </properties>
 
 	<dependencies>
@@ -178,12 +181,12 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>com.thimbleware.jmemcached</groupId>
-            <artifactId>jmemcached-core</artifactId>
-            <version>${memcachedtest.version}</version>
-            <scope>test</scope>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.thimbleware.jmemcached</groupId>-->
+            <!--<artifactId>jmemcached-core</artifactId>-->
+            <!--<version>${memcachedtest.version}</version>-->
+            <!--<scope>test</scope>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>commons-io</groupId>
@@ -192,10 +195,105 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.excilys.ebi.gatling.highcharts</groupId>
+            <artifactId>gatling-charts-highcharts</artifactId>
+            <version>${gatling.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-compiler</artifactId>
+            <version>${scala.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <version>${scala.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.excilys.ebi.gatling</groupId>
+            <artifactId>gatling-core</artifactId>
+            <version>${gatling.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.excilys.ebi.gatling</groupId>
+            <artifactId>gatling-http</artifactId>
+            <version>${gatling.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.thimbleware.jmemcached</groupId>
+            <artifactId>jmemcached-core</artifactId>
+            <version>1.0.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 	
 	<build>
 		<plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>1.5</version>
+                <executions>
+                    <execution>
+                        <id>add-test-source</id>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>add-test-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>src/integration-test/scala</source>
+                            </sources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>net.alchim31.maven</groupId>
+                <artifactId>scala-maven-plugin</artifactId>
+                <version>${scala-maven-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>test-scalac</id>
+                        <goals>
+                            <goal>testCompile</goal>
+                        </goals>
+                        <configuration>
+                            <args>
+                                <arg>-encoding</arg>
+                                <arg>UTF-8</arg>
+                                <!--<arg>-target:jvm-1.6</arg>-->
+                                <arg>-deprecation</arg>
+                                <!--<arg>-feature</arg>-->
+                                <arg>-unchecked</arg>
+                                <!--<arg>-language:implicitConversions</arg>-->
+                                <!--<arg>-language:reflectiveCalls</arg>-->
+                                <!--<arg>-language:postfixOps</arg>-->
+                            </args>
+                            <jvmArgs>
+                                <jvmArg>-Xms64m</jvmArg>
+                                <jvmArg>-Xmx1024m</jvmArg>
+                            </jvmArgs>
+                            <scalaVersion>${scala.version}</scalaVersion>
+                            <testSourceDir>src/integration-test/scala</testSourceDir>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>doc-jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -447,7 +545,6 @@
         </repository>
     </distributionManagement>
     <profiles>
-
         <!-- GPG Signature on release -->
         <profile>
             <id>release-sign-artifacts</id>
@@ -476,7 +573,115 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>flightrecorder</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.excilys.ebi.gatling</groupId>
+                        <artifactId>gatling-maven-plugin</artifactId>
+                        <version>${gatling.version}</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>execute</goal>
+                                </goals>
+                                <configuration>
+                                    <configDir>src/integration-test/resources</configDir>
+                                    <dataFolder>src/integration-test/resources/data</dataFolder>
+                                    <resultsFolder>target/gatling/results</resultsFolder>
+                                    <requestBodiesFolder>src/integration-test/resources/request-bodies</requestBodiesFolder>
+                                    <simulationsFolder>src/integration-test/scala</simulationsFolder>
+                                    <includes>
+                                        <include>**/*.scala</include>
+                                    </includes>
+                                    <simulationClass>org.greencheek.web.filter.memcached.ExecuteSimpleGetRequest</simulationClass>
+
+                                    <!--    <noReports>false</noReports> -->
+                                    <!--    <reportsOnly>false</reportsOnly> -->
+                                    <!--    <simulationClass>foo.Bar</simulationClass> -->
+                                    <jvmArgs>
+                                        <jvmArg>-Xmx1024m</jvmArg>
+                                        <jvmArg>-Xms1024m</jvmArg>
+                                        <jvmArg>-XX:MaxPermSize=512m</jvmArg>
+                                        <jvmArg>-XX:+UnlockCommercialFeatures</jvmArg>
+                                        <jvmArg>-XX:+FlightRecorder</jvmArg>
+                                        <jvmArg>-XX:StartFlightRecording=duration=160s,delay=20s,settings=profile,filename=target/recording.jfr</jvmArg>
+                                    </jvmArgs>
+
+                                    <fork>true</fork>
+                                    <!--    <propagateSystemProperties>true</propagateSystemProperties> -->
+                                    <!--    <failOnError>true</failOnError> -->
+
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>noflightrecorder</id>
+             <activation>
+                 <activeByDefault>true</activeByDefault>
+             </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.excilys.ebi.gatling</groupId>
+                        <artifactId>gatling-maven-plugin</artifactId>
+                        <version>${gatling.version}</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>execute</goal>
+                                </goals>
+                                <configuration>
+                                    <configDir>src/integration-test/resources</configDir>
+                                    <dataFolder>src/integration-test/resources/data</dataFolder>
+                                    <resultsFolder>target/gatling/results</resultsFolder>
+                                    <requestBodiesFolder>src/integration-test/resources/request-bodies</requestBodiesFolder>
+                                    <simulationsFolder>src/integration-test/scala</simulationsFolder>
+                                    <includes>
+                                        <include>**/*.scala</include>
+                                    </includes>
+                                    <simulationClass>org.greencheek.web.filter.memcached.ExecuteSimpleGetRequest</simulationClass>
+
+                                    <!--    <noReports>false</noReports> -->
+                                    <!--    <reportsOnly>false</reportsOnly> -->
+                                    <!--    <simulationClass>foo.Bar</simulationClass> -->
+                                    <jvmArgs>
+                                        <jvmArg>-Xmx1024m</jvmArg>
+                                        <jvmArg>-Xms1024m</jvmArg>
+                                        <jvmArg>-XX:MaxPermSize=512m</jvmArg>
+                                    </jvmArgs>
+
+                                    <fork>true</fork>
+                                    <!--    <propagateSystemProperties>true</propagateSystemProperties> -->
+                                    <!--    <failOnError>true</failOnError> -->
+
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
 
     </profiles>
-	
+    <repositories>
+        <repository>
+            <id>excilys</id>
+            <name>Excilys Repository</name>
+            <url>http://repository.excilys.com/content/groups/public</url>
+        </repository>
+    </repositories>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>excilys</id>
+            <name>Excilys Repository</name>
+            <url>http://repository.excilys.com/content/groups/public</url>
+        </pluginRepository>
+    </pluginRepositories>
 </project>
